# wakeonlan-python

./: 0 Wake-on-LAN Script with YAML Configuration.md  README.md  main.py  pyproject.toml
src/wakeonlan_python/: __init__.py  cli.py
